--- a/app/devliplayer/web.html
+++ b/app/devliplayer/web.html
@@ -65,15 +65,15 @@
 
         <div class="setting-title">Custom Palette</div>
         <div id="theme-selector">
+            <div class="color-dot" data-color="#ffc0cb" style="background:#ffc0cb" onclick="selectThemeColor(this)"></div> 
             <div class="color-dot" data-color="#ff0000" style="background:#ff0000" onclick="selectThemeColor(this)"></div>
             <div class="color-dot" data-color="#ff8c00" style="background:#ff8c00" onclick="selectThemeColor(this)"></div>
             <div class="color-dot" data-color="#ffff00" style="background:#ffff00" onclick="selectThemeColor(this)"></div>
             <div class="color-dot" data-color="#00ff00" style="background:#00ff00" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#00ffff" style="background:#00ffff" onclick="selectThemeColor(this)"></div>
+            <div class="color-dot" data-color="#00ff7f" style="background:#00ff7f" onclick="selectThemeColor(this)"></div> <div class="color-dot" data-color="#00ffff" style="background:#00ffff" onclick="selectThemeColor(this)"></div>
             <div class="color-dot" data-color="#0000ff" style="background:#0000ff" onclick="selectThemeColor(this)"></div>
             <div class="color-dot" data-color="#8a2be2" style="background:#8a2be2" onclick="selectThemeColor(this)"></div>
             <div class="color-dot" data-color="#ff00ff" style="background:#ff00ff" onclick="selectThemeColor(this)"></div> 
-            <div class="color-dot" data-color="#ffc0cb" style="background:#ffc0cb" onclick="selectThemeColor(this)"></div> 
             <div class="color-dot" data-color="#ffffff" style="background:#ffffff" onclick="selectThemeColor(this)"></div> 
             <div class="color-dot" data-color="#f5f5dc" style="background:#f5f5dc" onclick="selectThemeColor(this)"></div> 
             <div class="color-dot" data-color="#8b4513" style="background:#8b4513" onclick="selectThemeColor(this)"></div> 
@@ -186,7 +186,6 @@
         document.getElementById('opt-bg').classList.toggle('active', isBackground);
         document.getElementById('bg-status').innerText = isBackground ? "ON" : "OFF";
         saveSettings();
-        // 如果正在播放，切換模式時重置音訊連接
         if (player.src) {
             const wasPlaying = !player.paused;
             resetAudioNodes();
@@ -195,15 +194,8 @@
     }
 
     function resetAudioNodes() {
-        if (sourceNode) {
-            sourceNode.disconnect();
-            sourceNode = null;
-        }
-        if (aCtx) {
-            aCtx.close();
-            aCtx = null;
-            analyser = null;
-        }
+        if (sourceNode) { try { sourceNode.disconnect(); } catch(e){} sourceNode = null; }
+        if (aCtx) { try { aCtx.close(); } catch(e){} aCtx = null; analyser = null; }
     }
 
     function toggleLoop() { player.loop = !player.loop; document.getElementById('opt-loop').classList.toggle('active', player.loop); document.getElementById('loop-status').innerText = player.loop ? "ON" : "OFF"; saveSettings(); }
@@ -224,13 +216,9 @@
         titleTag.innerText = file.name; cover.style.opacity = "0";
         const tx = db.transaction("devilLatest", "readwrite");
         tx.objectStore("devilLatest").put({ name: file.name, blob: file }, "latestTrack");
-        
-        resetAudioNodes(); // 更換音樂時重置
+        resetAudioNodes();
         player.load(); 
-        player.play().then(() => { 
-            setLoading(false); 
-            initAudio(); 
-        }).catch(() => setLoading(false));
+        player.play().then(() => { setLoading(false); initAudio(); }).catch(() => setLoading(false));
         processFileMetadata(file);
     };
 
@@ -265,7 +253,7 @@
         if (isAuto) toggleAuto();
         const c = el.getAttribute('data-color');
         if (el.classList.contains('active')) { el.classList.remove('active'); selectedColors = selectedColors.filter(x => x !== c); }
-        else if (selectedColors.length < 13) { el.classList.add('active'); selectedColors.push(c); }
+        else if (selectedColors.length < 14) { el.classList.add('active'); selectedColors.push(c); }
         updateParticles(); saveSettings();
     }
     
@@ -287,10 +275,7 @@
 
     function initAudio() {
         if (aCtx || isBackground) {
-            // 如果是背景模式，不進行 AudioContext 劫持，確保聲音走原生通道
-            if (isBackground && !aCtx) {
-                loop(); // 仍然啟動動畫迴圈，但會走模擬分支
-            }
+            if (isBackground) loop();
             return;
         }
         try {
@@ -302,9 +287,7 @@
             analyser.fftSize = 256; 
             data = new Uint8Array(analyser.frequencyBinCount);
             loop();
-        } catch(e) {
-            console.error("AudioContext blocked or failed:", e);
-        }
+        } catch(e) {}
     }
 
     function loop() {
@@ -314,15 +297,16 @@
         let b = 0, m = 0;
         if (!player.paused) {
             if (analyser && !isBackground) {
-                // 精準模式：讀取實際頻譜
                 analyser.getByteFrequencyData(data); 
-                b = data[2]; 
-                m = data[15];
+                b = data[2]; m = data[15];
             } else {
-                // 背景播放/穩定模式：模擬隨機跳動，確保視覺不停止
-                b = 80 + Math.random() * 40; 
-                m = 60 + Math.random() * 30;
+                // 背景播放隨機動畫優化：播放時基礎振幅較大
+                b = 100 + Math.random() * 50; 
+                m = 80 + Math.random() * 40;
             }
+        } else {
+            // 暫停時振幅歸零
+            b = 0; m = 0;
         }
 
         ctx.clearRect(0, 0, cvs.width, cvs.height); ctx.globalCompositeOperation = 'screen';
@@ -330,16 +314,29 @@
             let e = (i % 2 === 0) ? b : m; p.angle += p.speed + (e / 1500);
             p.distance += ((e / 255) * (Math.min(cvs.width, cvs.height)*0.25) - p.distance) * 0.15;
             let x = (cvs.width/2) + Math.cos(p.angle) * p.distance, y = (cvs.height/2) + Math.sin(p.angle) * p.distance;
-            let sz = p.baseSize + (e * 0.6); const g = ctx.createRadialGradient(x, y, 0, x, y, sz);
+            let sz = p.baseSize + (e * 0.6); 
+            const g = ctx.createRadialGradient(x, y, 0, x, y, sz);
             g.addColorStop(0, p.color); g.addColorStop(1, 'transparent'); ctx.fillStyle = g; ctx.beginPath(); ctx.arc(x, y, sz, 0, Math.PI*2); ctx.fill();
         });
         if (showCover && cover.style.display === 'block') cover.style.transform = `scale(${1 + (b / 600)})`;
     }
 
     async function clearAppCache() { 
-        if (confirm('Clear all settings, music and cache?')) { 
-            localStorage.clear(); indexedDB.deleteDatabase("devilLatestDB");
-            if ('caches' in window) { const ns = await caches.keys(); await Promise.all(ns.map(n => caches.delete(n))); }
+        if (confirm('Clear ALL data? (This will delete saved music, settings, and cache)')) { 
+            // 1. 清除 LocalStorage
+            localStorage.clear(); 
+            // 2. 清除 IndexedDB (音樂存儲)
+            const dbs = ["devilLatestDB"];
+            dbs.forEach(dbName => {
+                const req = indexedDB.deleteDatabase(dbName);
+                req.onsuccess = () => console.log("DB deleted");
+            });
+            // 3. 清除 Service Worker Cache
+            if ('caches' in window) { 
+                const ns = await caches.keys(); 
+                await Promise.all(ns.map(n => caches.delete(n))); 
+            }
+            alert('Data cleared. Reloading...');
             location.reload(); 
         } 
     }
